Create 1.0 app version (#5)